--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "async": "0.2.x",
     "request": "2.26.x",
     "cluestr-provider": "0.x.x",
-    "sspawn": "0.1.1"
+    "sspawn": "0.1.1",
+    "nforce": "0.6.x"
   },
   "devDependencies": {
     "mocha": "1.11.x",
