--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "node ./bin/server",
     "upload": "node ./bin/upload",
-    "test": "NODE_ENV=test mocha -R spec -t 50000000",
+    "test": "NODE_ENV=test mocha -R spec -t 2500",
     "lint": "jshint lib/ test/ config/ bin/"
   },
   "main": "./lib/provider-salesforce",
