--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "request": "2.26.x",
     "cluestr-provider": "0.x.x",
     "sspawn": "0.1.1",
-    "nforce": "0.6.x"
+    "nforce": "0.6.x",
+    "mongoose": "3.6.x"
   },
   "devDependencies": {
     "mocha": "1.11.x",
