--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
   - secure: IbLlQRECFlEvUQf0ZM5St8RCc5ULPzWwn9arXNonJyxp1p90OCcdqh9qqwzPKOnYIOlDwV9RdOI2Hg4RtCyZPaqrUOeHu66ihtTwgxqSRPZyPg7v4+4ET7O8WZrMByedsDnIARAea+YplD4vHYbSjzYCZbwD5gyMZyQ84weci8Q=
   - secure: Qq+BiGie4GPrr2+Bg3g4II/TQQPv0IURCF3N8cYHf8sM7XTuyGCDBmMoeuSaogq6pNd5J443z5ekLUPT1BZHdZoIDVAEQDI9x21I0MNaySmBtpJT5+53b2jZ3ku60VGiqGv0KPQRj0CceHfYigSZfBOYNjUYqf4LwWp2humVuSQ=
   - secure: SH8cc/8t31720tetsh73oTLWFsIHCGY0q1JwfGjaSCIJeoBlxwzUl+rkkxlBRip2XhtZuy/+Qmi3vdRhFOYLimi4Bu2HSHMv0RH1VFUakrC4Ivi9WLzz9LGHw8VW7vz6uv2P5ZSUP4wT/DZ1Mv2eM9R9+IOhpggMbJ0KCoYOY6g=
+  - secure: Hr2VcZYOsCRMtIolVx2IlbWulC9M3GmLX7szJYV54RLMxH4iZ5kqfhZAKxMUH+7lZKU3k6cg9Z3JcT208IAi1yGOXEt41xfn0QOn9Lr4Q04FBWHXX+Z0cIUHjEhqXwTxyjf1HhCAqsa13ag4IcCMpR9KPRrjeEXOJ+Zf4JmW7jA=
   - SALESFORCE_CONNECT_URL="http://localhost:8000/init/connect"
   - SALESFORCE_CALLBACK_URL="http://localhost:8000/init/callback"
   - SALESFORCE_MAX_CONCURRENCY="5"
