--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "cluestr-provider": "0.x.x",
     "sspawn": "0.1.1",
     "nforce": "0.6.x",
-    "mongoose": "3.6.x"
+    "mongoose": "3.6.x",
+    "newrelic": "1.x.x"
   },
   "devDependencies": {
     "mocha": "1.11.x",
