--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "async": "0.2.x",
     "request": "2.34.x",
-    "anyfetch-provider": ">=0.3.11",
+    "anyfetch-provider": "^0.3.11",
     "sspawn": "0.1.1",
     "nforce": "0.7.x",
     "mongoose": "3.8.x",
