--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "salesforce"
   ],
   "dependencies": {
-    "async": "0.9.x",
-    "request": "2.37.x",
     "anyfetch-provider": "^1.1.5",
-    "dotenv": "^0.4.0"
+    "async": "0.9.x",
+    "dotenv": "^0.4.0",
+    "jsforce": "^1.3.1",
+    "request": "2.37.x"
   },
   "devDependencies": {
     "mocha": "1.20.x",
