--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "async": "0.9.x",
     "dotenv": "^0.4.0",
     "jsforce": "^1.3.1",
+    "rarity": "^2.1.1",
     "request": "2.37.x"
   },
   "devDependencies": {
