--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "salesforce"
   ],
   "dependencies": {
-    "anyfetch-provider": "1.1.9",
+    "anyfetch-provider": "^1.2.0",
     "async": "0.9.x",
     "dotenv": "^0.4.0",
     "jsforce": "^1.3.1",
